# pngquant-android

./: .gitmodules  README.md  build.gradle  circle.yml
.circleci/: config.yml
gradle/wrapper/: gradle-wrapper.properties
pngquant-android/: build.gradle
pngquant-android/src/main/: AndroidManifest.xml
pngquant-android/src/main/cpp/: Application.mk  CMakeLists.txt
pngquant-android/src/main/java/com/nicdahlquist/pngquant/: LibPngQuant.java
pngquant-android/src/main/jni/: CMakeLists.txt  native_glue.c
testapp/: build.gradle
testapp/src/main/java/com/nicdahlquist/pngquant/testapp/: MainActivity.java  PngQuantTask.java  PngUtils.java
